src/ui/styles.css
body {
  background-color: #181818;
  color: #FF0000;
  border: 2px solid #FF0000;
  align-items: center;
  justfiy-content: flex-start;
  box-sizing: content-box;
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  position: relative;
  height: 190px;
  width: 280px;
  padding: 10px;
}

h1 {
  font-size: 25px;
  margin: 2px 0;
}

a {
  color: grey;
  text-decoration: none;
}

#loader {
  display:none;
  position: absolute;
  left: 47%;
  top: 80%;
  z-index: 1;
  border: 3px solid #282828;
  border-radius: 50%;
  border-top: 3px solid #ff0000;
  width: 15px;
  height: 15px;
  -webkit-animation: spin 2s linear infinite; /* Safari */
  animation: spin 2s linear infinite;
}

/* Safari */
@-webkit-keyframes spin {
  0% { -webkit-transform: rotate(0deg); }
  100% { -webkit-transform: rotate(360deg); }
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

#info {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin: 0 0 5px;
}

.bullet {
  color: grey;
  margin: 0 5px;
  font-size: 7px;
}

#github, #issue, #contact {
  font-size: 8px;
  letter-spacing: 1px;
}

#github:hover, #issue:hover, #contact:hover {
  opacity: 0.8;
}

#controls {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#ctltxt {
  color: grey;
  font-family: monospace;
  font-size: 10px;
  font-size: 3.2vw;
  letter-spacing: 0.8px;
  text-align: center;
}

#ctlnum {
  margin-top: 12px;
  margin-bottom: 5px;
  letter-spacing: 2px;
  font-size: 8px;
  color: grey;
}

#ctlbtns {
  display:flex;
  flex-direction: row;
  align-items: center;
}

#load, #prev, #next {
  font-size: 8px;
  letter-spacing: 1px;
  padding: 3px 4px;
  color: #181818;
  background-color: #FF0000;
  cursor: pointer;
}

#load:hover, #prev:hover, #next:hover, #media:hover {
  opacity: 0.8;
}

#prev, #next, #media {
  margin: 0 6px;
  font-size: 10px;
}

#media {
  font-size: 9px;
  color: grey;
  cursor: pointer;
}

#status {
  letter-spacing: 1px;
  font-family: monospace;
  font-size: 12px;
  margin-top: 20px;
}

form {
  display: flex;
  flex-flow: row wrap;
  align-items: center;
}

fieldset {
  border: 0;
}

input[type=text] {
    padding:5px;
    border: 1px solid #181818;
    cursor: no-drop;
}

input[type=text]:focus {
    border-color: #181818;
}

input[type=submit] {
    letter-spacing: 1px;
    padding:5px 7px;
    background: #FF0000;
    border:0 none;
    cursor: no-drop;
}

input[type=submit]:hover {
  opacity: 1;
}

